--- a/style.css
+++ b/style.css
@@ -389,7 +389,7 @@ body{
     padding-top: 100px;
 }
 .box2{
-    height: 300px;
+    height: 303px;
     width: 270px;
     background-color: white;
 }
@@ -414,10 +414,21 @@ body{
     background-size: cover;
 }
 .box3{
-    height: 300px;
+    height: 303px;
     width: 270px;
     background-color: rgb(8, 27, 123);
     background-color: white;
+}
+.t{
+    font-size: larger;
+    font-weight: bold;
+    padding-top: 10px;
+}
+.toys{
+    height: 250px;
+    width:270px ;
+    background-image:url("toys.jpg") ;
+    background-size: cover;
 }
 .box4{
     height: 300px;
