--- a/style.css
+++ b/style.css
@@ -433,7 +433,7 @@ body{
 .box4{
     height: 300px;
     width: 270px;
-    background-color: rgb(19, 187, 13);
+    
     background-color: white;
     
 }
@@ -497,4 +497,80 @@ body{
     
     background-image: url("box-4-d.jpg");
     background-size: cover;
+}
+.cloths{
+    height: 400px;
+    display: flex;
+    justify-content: space-evenly;
+    
+}
+.cloths-box1{
+    height: 350px;
+    width: 270px;
+    background-color: white;
+}
+.td{
+    font-size: larger;
+    font-weight: bold;
+    padding-top: 20px;
+    padding-left: 10px;
+}
+.cloth-text1{
+    display: flex;
+    padding-top:10px ;
+    color: red;
+    font-size: small;
+    font-weight: bold;
+    justify-content: space-evenly;
+}
+.off{
+   height:24px ;
+   width: 89px;
+   color: white;
+   font-size: small;
+   background-color: rgb(212, 20, 20);
+   border-radius: 4px;
+   margin-left: 10px;
+   padding-top: 5px;
+   padding-left: 3px;
+   
+}
+.cloth-text2{
+    font-size: small;
+    padding-left: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.cloths-pic{
+    height: 230px;
+    width: 171px;
+    background-image: url("cloths.jpg");
+    background-size: cover;
+    margin-top: 20px;
+    margin-left: 50px;
+}
+.sad{
+    font-size: smaller;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(9, 94, 9);
+    padding-top: 20px;
+    padding-left: 30px;
+}
+.sad:hover{
+    color: orange;
+    text-decoration: underline;
+}
+.cloths-box2{
+    height: 350px;
+    width: 270px;
+    background-color: rgb(42, 29, 6);
+}
+.cloths-box3{
+    height: 350px;
+    width: 270px;
+    background-color: rgb(40, 22, 146);
+}
+.cloths-box4{
+    height: 350px;
+    width: 270px;
+    background-color: rgb(124, 11, 105);
 }
