--- a/style.css
+++ b/style.css
@@ -562,7 +562,75 @@ body{
 .cloths-box2{
     height: 350px;
     width: 270px;
-    background-color: rgb(42, 29, 6);
+    background-color: white;
+}
+.box2-text{
+    font-size: larger;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    padding-top: 10px;
+    padding-left: 20px;
+}
+.cloths-box2-a{
+    height:150px ;
+    width:250px ;
+    margin-top: 10px;
+    margin-left: 10px;
+    display: flex;
+    justify-content: space-evenly;
+}
+.cloths-box2-a1{
+    height:110px ;
+    width: 100px;
+    background-image: url("box-6-a.jpg");
+    background-size: cover;
+}
+.cloths-box2-a1-text{
+    font-size: small;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 110px;
+}
+.cloths-box2-a2{
+    height:110px ;
+    width: 100px;
+    background-image: url("box-6-b.jpg");
+    background-size: cover;
+}
+.cloths-box2-a2-text{
+    font-size: small;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 110px;
+}
+.cloths-box2-b{
+    height:150px ;
+    width:250px ;
+  
+    margin-left: 10px;
+    display: flex;
+    margin-top: 10px;
+    justify-content: space-evenly;
+}
+.cloths-box2-b1{
+    height:110px ;
+    width:100px ;
+    background-image: url("box-6-c.jpg");
+    background-size: cover;
+}
+.cloths-box2-b1-text{
+    font-size: x-small;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 110px;
+}
+.cloths-box2-b2{
+    height:110px ;
+    width:100px ;
+    background-image: url("box-6-d.jpg");
+    background-size: cover;
+}
+.cloths-box2-b2-text{
+    font-size: x-small;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 110px;
 }
 .cloths-box3{
     height: 350px;
