--- a/style.css
+++ b/style.css
@@ -642,7 +642,7 @@ body{
     width: 240px;
     background-image: url("box-8.jpg");
     background-size: cover;
-    margin-top: 20px;
+    margin-top: 30px;
     margin-left: 20px;
 }
 .cloths-box3-text{
@@ -655,5 +655,20 @@ body{
 .cloths-box4{
     height: 350px;
     width: 270px;
-    background-color: rgb(124, 11, 105);
+    background-color: white;
+}
+.cloths-box4-text{
+ font-size: larger;
+ font-weight: bold;
+ font-family: Arial, Helvetica, sans-serif;
+ padding-top: 10px;
+ padding-left: 20px;
+}
+.cloths-box4-pic{
+    height: 270px;
+    width: 240px;
+    background-image: url("box-9.jpg");
+    background-size: cover;
+    margin-left: 15px;
+    margin-top: 30px;
 }
