--- a/style.css
+++ b/style.css
@@ -836,7 +836,7 @@ color: rgb(40, 40, 40);
 
 }
 .footer-end{
-    height: 350px;
+    height: 500px;
     background-color: #010e1e;
 }
 .footer-end-container{
@@ -854,20 +854,51 @@ color: rgb(40, 40, 40);
     font-weight: bold;
     color: whitesmoke;
 }
+.design1:hover{
+    text-decoration: underline;
+}
 .design2{
     font-size: small;
     font-family: Arial, Helvetica, sans-serif;
     color:rgb(233, 229, 229) ;
 }
+.design2:hover{
+    text-decoration: underline;
+}
 .line2{
     display: flex;
     justify-content: space-evenly;
+    margin-top: 5px;
 }
 .line3{
     display: flex;
     justify-content: space-evenly;
+    margin-top: 10px;
 }
 .line4{
     display: flex;
     justify-content: space-evenly;
+    margin-top: 10px;
+}
+
+.footer-container{
+    height: 60px;
+    width: 500px;
+    
+    margin-top: 110px;
+    margin-left: 400px;
+    
+    /*background-color:#010e1e  ; */
+    padding-top: 30px;
+    padding-left: 100px;
+}
+
+.footer-c-text1{
+    display: flex;
+   
+}
+.footer-c-text2{
+    font-size: small;
+    font-family: Arial, Helvetica, sans-serif;
+    color:rgb(233, 229, 229) ;
 }
